--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://175.178.160.50:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=tue&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
-      password: "root123456"
+      password: root123456
   redis:
     host: localhost
     port: 6379
